k8s/dcxy-k8s资料/资料/day17/实验文件/05/pod-cm.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "cm-pod"
  namespace: default
  labels:
    app: "cm-pod"
spec:
  volumes:
  - name: my-cm
    configMap: 
      name: game-demo ## 指定cm的名字
      # items: 
      #  - 
  containers:
  - name: cm-pod
    image: "busybox"
    command: ["/bin/sh","-c","sleep 3600"]
    volumeMounts:
    - name: my-cm
      mountPath: /app  ## 容器内的app文件夹是集群中 secret名叫db-user-pass的内容
