k8s/dcxy-k8s资料/资料/day17/实验文件/05/pod-nfs-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "pod-nfs-02"
  namespace: default
  labels:
    app: "pod-nfs-02"
spec:
  containers:
  - name: pod-nfs-02
    image: "nginx"
    ports:
    - containerPort:  80
      name:  http
    volumeMounts:
    - name: localtime
      mountPath: /etc/localtime
    - name: html
      mountPath: /usr/share/nginx/html  ## /一定会是文件夹。不带/请指定好类型
      # type: DirectoryOrCreate
  volumes: 
    - name: localtime
      hostPath:  
        path: /usr/share/zoneinfo/Asia/Shanghai
    - name: html
      nfs:  ## 使用nfs存储系统
        server: 10.170.11.8  ## 没type
        path: /nfs/data/abc  ### abc文件夹提前创建

    - name: haha
      persistentVolumeClaim:  ## 持久卷申请 关联一个 PV（PersistentVolume）持久卷
        # xxx，  8G，ssd。  k8s给你指定的持久化空间  PVC --- PV
