k8s/dcxy-k8s资料/资料/day17/实验文件/05/pod-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "nginx-pvc-000"
  namespace: default
  labels:
    app: "nginx-pvc-000"
spec:
  containers:
  - name: nginx-pvc-000
    image: "nginx"
    ports:
    - containerPort:  80
      name:  http
    volumeMounts:
    - name: localtime
      mountPath: /etc/localtime
    - name: html
      mountPath: /usr/share/nginx/html
  volumes:
    - name: localtime
      hostPath:
        path: /usr/share/zoneinfo/Asia/Shanghai
    - name: html
      persistentVolumeClaim:
         claimName:  nginx-pvc  ### 你的申请书的名字
  restartPolicy: Always
