k8s/dcxy-k8s资料/资料/day17/实验文件/05/pod-secret-volumes.yaml
# secret保存在集群的etcd里面
## kubectl create secret 
apiVersion: v1
kind: Pod
metadata:
  name: "pod-secret-volume"
  namespace: default
  labels:
    app: "pod-secret-volume"
spec:
  volumes: ## 指定挂载详情
  - name: app
    secret: 
      defaultMode: 0777 ### 修改默认的权限模式
      secretName: db-user-pass  ### secret里面所有的key全部挂出来，
      items:
      - key: password.txt  ## db-user-pass里面的password.txt这个key的内容挂出来
        path: pwd.md ### 默认secret里面数据的key是作为文件名的。 path就是相当于我们自己指定一个文件名

  containers:
  - name: pod-secret-volume
    image: "busybox"
    command: ["/bin/sh","-c","sleep 3600"]  ## echo $My_USR
    resources:
       limits:
         cpu: 10m ###  1核代表1000m
       requests: 
         cpu: 5m
    volumeMounts:
    - name: app
      mountPath: /app  ## 容器内的app文件夹是集群中 secret名叫db-user-pass的内容
      readOnly: false
