k8s/dcxy-k8s资料/资料/day17/实验文件/05/pod-secret.yaml
# secret保存在集群的etcd里面
apiVersion: v1
kind: Pod
metadata:
  name: "pod-secret"
  namespace: default
  labels:
    app: "pod-secret"
spec:
  containers:
  - name: pod-secret
    image: "busybox"
    command: ["/bin/sh","-c","sleep 3600"]  ## echo $My_USR
    resources:
       limits:
         cpu: 10m ###  1核代表1000m
       requests: 
         cpu: 5m
